// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> that renders a button should add classes when props are changed 1`] = `
<Button
  context="primary"
  isBlock={true}
  size="large"
>
  <button
    className="Button Button--context_primary Button--size_large Button--isBlock"
  >
    <span>
      Click me
    </span>
  </button>
</Button>
`;

exports[`<Button> that renders a button should render an ancor element if href is defined 1`] = `
<Button
  href="/"
>
  <a
    className="Button"
    href="/"
  >
    Click me
  </a>
</Button>
`;

exports[`<Button> that renders a button should render default button correctly 1`] = `
<Button>
  <button
    className="Button"
  >
    Click me
  </button>
</Button>
`;
